sumo/tests/traci/VariableRetrieval/MeMeDetector/errors/UnknownAD/testclient_out.traci
TraCITestClient output file. Date: Sat Oct  9 00:28:47 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=161 varID=16 objID=xxx
.. Answered with error to command (161), [description: Areal detector 'xxx' is not known]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
